# Control

./: .gitignore  .gitmodules  CMakeLists.txt  README copy.md  README.md  README2.md  deploy_SW_on_desktop.sh  start_influxDB_Grafana.sh  stop_influxDB_Grafana.sh
.github/workflows/: main.yml
Capsule/: LICENSE  README.md  library.json
Capsule/src/: basicExample.cpp  capsule.h
ERT_RF_Protocol_Interface/: MacAdresses.h  PacketDefinition.h  ParameterDefinition.h  README.md
GUI/: CMakeLists.txt
GUI/include/: ClientInterface.h  ClientManager.h  ControlPannelView.h  DataView.h  GSManagerView.h  Log.h  MainWindow.h  RequestBuilder.h  SerialView.h  Setup.h  TelemetryView.h  TimerView.h  ValveControlView.h
GUI/include/components/: DataLabel.h  DraggableButton.h  ToggleButton.h  ValveButton.h  ValveControlButton.h
GUI/include/json/: comment.md
GUI/res/: resources.qrc  resources.rcc
GUI/src/: Log.cpp  MainWindow.cpp  Setup.h  main.cpp
GUI/src/components/: DataLabel.cpp  DraggableButton.cpp  ToggleButton.cpp  ValveButton.cpp  ValveControlButton.cpp
GUI/src/network-utils/: ClientManager.cpp  RequestBuilder.cpp
GUI/src/views/: ControlPannelView.cpp  DataView.cpp  GSManagerView.cpp  SerialView.cpp  TelemetryView.cpp  TimerView.cpp  ValveControlView.cpp
GUI/tests/: CMakeLists.txt  my_test.cpp
Server/: CMakeLists.txt
Server/include/: RequestAdapter.h  RequestHandler.h  Server.h
Server/src/: RequestAdapter.cpp  main.cpp  server.cpp
Server/src/network/: RequestHandler.cpp
UI/: CMakeLists.txt  Firehorn.ui  GS2023.ui  NordendGUI.cpp  NordendGUI.h  Nordend_V1.ui  PropGSUI.ui  assets.qrc
include/: ClientInterface.h  ClientManager.h  DataView.h  GSManagerView.h  Server.h
src/: FancyGUI.cpp  MainProp.cpp  Nordend.cpp  XSTRATO.cpp  influxdb.cpp  main.cpp  test.cpp
src/network-utils/: ClientManager.cpp
src/server/: main.cpp
src/views/: DataView.cpp  GSManagerView.cpp
